--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>sample website</title>
+		<title>MZH Computer Training Online Class</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
 
 		<style>
 			.jumbotron{
-	background-image: url('images/images (1).jpg');
+	background-image: url('bimages/272073847_103408835585662_9122583222148368621_n.png');
 			background-size: cover;}
 		</style>
 	</head>
@@ -31,7 +31,7 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+<a class="nav-link active text-white"aria-current="page" href="#">Home</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link text-white" href="#">Features</a>
@@ -205,8 +205,8 @@
 
 			<!-- Copyright -->
 			<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-				© 2020 Copyright:
-				<a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+				© 2023 Copyright:
+				<a class="text-white" href="https://mdbootstrap.com/">MZH Computer Training Oline Class</a>
 			</div>
 			<!-- Copyright -->
 		</footer>
