--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<style>
 			.jumbotron{
-	background-image: url('bimages/272073847_103408835585662_9122583222148368621_n.png');
+	background-image: url('images/272073847_103408835585662_9122583222148368621_n.png');
 			background-size: cover;}
 		</style>
 	</head>
@@ -54,7 +54,7 @@
 		<!-- Jumbotron -->
 		<div class="jumbotron jumbotron-fluid bg-primary text-center p-5">
 			<div class="container ">
-				<h1 class="display-1 ">Fluid jumbotron</h1>
+				<h1 class="display-1 ">MZH Computer Training Online Class</h1>
 				<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 			</div>
 		</div>
@@ -72,7 +72,7 @@
 		<div class="row ">
 			<div class="col">
 					<h3 class="mb-4">What is Lorem Ipsum?</h3>	
-					<img src="images/download (1).jpg " class="img-fluid rounded"/>
+					<img src="images/272073847_103408835585662_9122583222148368621_n.png " class="img-fluid rounded"/>
 					
 					<div align="justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
 
