--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	
 		<!-- Jumbotron -->
 		<div class="jumbotron jumbotron-fluid bg-primary text-center p-5">
-			<div class="container ">
+			<div class="container mb-5 mt-5">
 			
 			</div>
 		</div>
@@ -85,7 +85,7 @@
 	
 	
 	
-		<div class="container pt-20">
+		<div class="container mt-5">
 		<div class="row ">
 			<div class="col">
 					<h3 class="mb-4">What is Lorem Ipsum?</h3>	
