--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 	<!-- NavBar-->
 	
 		<!-- Jumbotron -->
-		<div class="jumbotron jumbotron-fluid bg-primary text-center p-5">
-			<div class="container mb-5 mt-5">
-			
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container">
+				<h1 class="display-4"></h1>
+				<p class="lead"></p>
 			</div>
 		</div>
-
 
 
 
