--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<!-- NavBar-->
 	
 		<!-- Jumbotron -->
-		<div class="jumbotron jumbotron-fluid p-lg-4">
+		<div class="jumbotron jumbotron-fluid m-5">
 			<div class="container">
 				<h1 class="display-4"></h1>
 				<p class="lead"></p>
