--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 	<!-- NavBar-->
 		
-			<nav class="navbar navbar-expand-lg bg-primary fixed-top">
+			<nav class="navbar navbar-expand-lg bg-primary fixed-top mb-5">
 				<div class="container">
 							
 				<button type="button" class="btn btn-warning btn-lg order-1" data-bs-toggle="modal" data-bs-target="#register">Register Now</button>
@@ -70,7 +70,7 @@
 	<!-- NavBar-->
 	
 		<!-- Jumbotron -->
-		<div class="jumbotron jumbotron-fluid m-5">
+		<div class="jumbotron jumbotron-fluid ">
 			<div class="container">
 				<h1 class="display-4"></h1>
 				<p class="lead"></p>
