--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 		<style>
 			.jumbotron{
 	background-image: url('images/272073847_103408835585662_9122583222148368621_n.png');
-			background-size: cover;}
+			background-size: cover;
+			margin-bottom: 200px;
+			margin-top: 200px;}
 		</style>
 	</head>
 	<body>
 	<!-- NavBar-->
 		
-			<nav class="navbar navbar-expand-lg bg-primary fixed-top mb-5">
+			<nav class="navbar navbar-expand-lg bg-primary fixed-top ">
 				<div class="container">
 							
 				<button type="button" class="btn btn-warning btn-lg order-1" data-bs-toggle="modal" data-bs-target="#register">Register Now</button>
