--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	background-image: url('images/272073847_103408835585662_9122583222148368621_n.png');
 			background-size: cover;
 			margin-bottom: 200px;
-			margin-top: 200px;}
+			margin-top: 200px;
+			}
 		</style>
 	</head>
 	<body>
