--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<style>
 			.jumbotron{
 	background-image: url('images/272073847_103408835585662_9122583222148368621_n.png');
-			background-size: cover;
+			background-size:align-content: space-between;
 			margin-bottom: 200px;
 			margin-top: 200px;
 			}
@@ -75,7 +75,7 @@
 		<!-- Jumbotron -->
 		<div class="jumbotron jumbotron-fluid ">
 			<div class="container">
-				
+				<img src="images/272073847_103408835585662_9122583222148368621_n.png"/>
 			</div>
 		</div>
 
