--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<style>
 			.jumbotron{
 	background-image: url('images/272073847_103408835585662_9122583222148368621_n.png');
-			background-size:align-content: space-between;
-			margin-bottom: 200px;
-			margin-top: 200px;
+			background-size: cover;
+			margin-bottom: 500px;
+			margin-top: 500px;
 			}
 		</style>
 	</head>
