--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 			.jumbotron{
 	background-image: url('images/272073847_103408835585662_9122583222148368621_n.png');
 			background-size: cover;
-			margin-bottom: 500px;
-			margin-top: 500px;
+			margin-bottom: 3px;
+			margin-top: 3px;
+			height: 500px;
 			}
 		</style>
 	</head>
