--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</button>
 					<nav class="navbar navbar-expand-lg navbar-light bg-light">
 						<div class="container-fluid">
-							<a class="navbar-brand" href="#">Navbar</a>
+							<a class="navbar-brand" href="#"><img src="images/271653012_101749002418312_7108562534818636461_n.jpg"/></a>
 							<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
