--- a/index.html
+++ b/index.html
@@ -44,18 +44,22 @@
 									<a class="nav-link active" aria-current="page" href="#">Home</a>
 									</li>
 									<li class="nav-item">
-									<a class="nav-link" href="#">Training</a>
+									<a class="nav-link" href="#">Complete Trainees</a>
 									</li>
 									<li class="nav-item dropdown">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 									Training
 									</a>
 									<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<li><a class="dropdown-item" href="#">Action</a></li>
-									<li><a class="dropdown-item" href="#">Another action</a></li>
+									<li><a class="dropdown-item" href="#">Microsoft 3D Painting Course</a></li>
+									<li><a class="dropdown-item" href="#">Scratch Programming Course</a></li>
+									<li><a class="dropdown-item" href="#">Web Design Course</a></li>
 									<li><hr class="dropdown-divider"></li>
-									<li><a class="dropdown-item" href="#">Something else here</a></li>
-									</ul>
+									<li><a class="dropdown-item" href="#">Pictoblox Programming Course</a></li>
+									<li><a class="dropdown-item" href="#">Microsoft Office Course</a></li>
+									<li><a class="dropdown-item" href="#">Adobe Photoshop Course</a></li>
+									<li><a class="dropdown-item" href="#">Advanced Excel</a></li>
+									
 									</li>
 									
 								</ul>
