--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			margin-bottom: 3px;
 			margin-top: 10px;
 			height: 500px;
+			position: fixed;
 			}
 		</style>
 	</head>
@@ -59,7 +60,7 @@
 									<li><a class="dropdown-item" href="#">Microsoft Office Course</a></li>
 									<li><a class="dropdown-item" href="#">Adobe Photoshop Course</a></li>
 									<li><a class="dropdown-item" href="#">Advanced Excel</a></li>
-									
+									</ul>
 									</li>
 									
 								</ul>
