--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<body>
 	<!-- NavBar-->
 		
-			<nav class="navbar navbar-expand-lg bg-primary fixed-top mb-5">
+			<nav class="navbar navbar-expand-lg bg-primary fixed-top pb-5">
 				<div class="container">
 							
 				<button type="button" class="btn btn-warning btn-lg order-1" data-bs-toggle="modal" data-bs-target="#register">Register Now</button>
