--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             data-ripple-color="light"
           >
 								<img
-								src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp"
+								src="images/285845786_183346174264782_5701371903460343594_n.jpg"
 								class="w-100"
 								/>
 								<a href="#!">
@@ -142,7 +142,7 @@
             data-ripple-color="light"
           >
 								<img
-								src="https://mdbcdn.b-cdn.net/img/new/fluid/city/111.webp"
+								src="images/301380234_183346234264776_3167856170386132767_n.jpg"
 								class="w-100"
 								/>
 								<a href="#!">
@@ -159,7 +159,7 @@
             data-ripple-color="light"
           >
 								<img
-								src="https://mdbcdn.b-cdn.net/img/new/fluid/city/112.webp"
+								src="images/302317772_183346204264779_7639460298611663575_n.jpg"
 								class="w-100"
 								/>
 								<a href="#!">
@@ -176,7 +176,7 @@
             data-ripple-color="light"
           >
 								<img
-								src="https://mdbcdn.b-cdn.net/img/new/fluid/city/114.webp"
+								src="images/305020741_183346297598103_3490890986212786084_n (1).jpg"
 								class="w-100"
 								/>
 								<a href="#!">
@@ -193,7 +193,7 @@
             data-ripple-color="light"
           >
 								<img
-								src="https://mdbcdn.b-cdn.net/img/new/fluid/city/115.webp"
+								src="images/304841411_183346264264773_3322093147827021953_n.jpg"
 								class="w-100"
 								/>
 								<a href="#!">
@@ -210,7 +210,7 @@
             data-ripple-color="light"
           >
 								<img
-								src="https://mdbcdn.b-cdn.net/img/new/fluid/city/116.webp"
+								src="images/285845786_183346174264782_5701371903460343594_n.jpg"
 								class="w-100"
 								/>
 								<a href="#!">
