--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 			<!-- Copyright -->
 			<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
 				© 2023 Copyright:
-				<a class="text-white" href="https://mdbootstrap.com/">MZH Computer Training Oline Class</a>
+				<a class="text-white" href="https://mdbootstrap.com/">MZH Computer Training </a>
 			</div>
 			<!-- Copyright -->
 		</footer>
